--- a/casino_testapp/Views/Shared/_Layout.cshtml
+++ b/casino_testapp/Views/Shared/_Layout.cshtml
@@ -64,15 +64,15 @@
 
         <!-- End Search Bar -->
 
-        <nav id="header"  class="header-nav ms-auto">
+        <nav id="header" class="header-nav ms-auto">
             <ul class=" d-flex align-items-center">
                 <!-- End Search Icon-->
                 <li class="nav-item dropdown pe-3">
                     <div class="nav-profile">
                         <form class="search-form d-flex align-items-center" style="justify-content: flex-end;"
-                              method="POST" action="#">
+                            method="POST" action="#">
                             <input type="text" name="query" placeholder="Php 0.00" title="Enter search keyword"
-                                   style="width:fit-content; background:beige;" disabled>
+                                style="width:fit-content; background:beige;" disabled>
                             <button type="submit" title="cash"><i class="bi bi-cash-coin"></i></button>
                         </form>
                     </div>
@@ -180,9 +180,7 @@
     </aside><!-- End Sidebar-->
 
     <main id="main" class="main bg-cover bg-no-repeat"
-        >
-
-    @*style="background-image: url(' ~/Content/assets/img/webbackground.jpg')"*@
+        style="background-image: url(' ~/Content/assets/img/Background/BG.jpg')">
         @*<section class="section">*@
         <div class="content-wrapper" ng-app="MJCasinoapp">
             @RenderBody()
