--- a/casino_testapp/Content/assets/css/style.css
+++ b/casino_testapp/Content/assets/css/style.css
@@ -390,7 +390,7 @@ h6 {
   color: transparent;
  
 }
-.nav-link.active  img1 {
+.nav-link.active  img {
     border-radius: 100%;
   border: 5px solid rgb(218, 255, 8)
   
