--- a/casino_testapp/Views/Home/Index.cshtml
+++ b/casino_testapp/Views/Home/Index.cshtml
@@ -41,7 +41,7 @@
 
 <div ng-controller="dashboardCtrlr">
     <div class="nav navbars">
-        <ul class="nav-tabs nav-tabs-bordered d-flex navbuttons img1" id="borderedTabJustified" role="tablist"
+        <ul class="nav-tabs nav-tabs-bordered d-flex navbuttons" id="borderedTabJustified" role="tablist"
             style="border-bottom:none;">
             <li class="nav-item flex-fill" role="presentation">
                 <button class="nav-link w-45 active" id="home-tab" data-bs-toggle="tab"
@@ -115,67 +115,91 @@
 
         </div>
         <div class="col-xl-12">
-
             <div class="card">
-
                 <img src="~/Content/assets/img/thumbnail/Games.png" alt="">
             </div>
         </div>
     </div>
-    <div class="row">
+    <div style="background: transparent;">
+        <div class="nav navbars">
+            <!-- Default Tabs -->
+            <ul class=" nav-tabs d-flex navbuttons" id="myTabjustified" role="tablist">
+                <li class="nav-item flex-fill" role="presentation">
+                    <button class="nav-link w-45 active" id="home-tab" data-bs-toggle="tab"
+                        data-bs-target="#home-justified" type="button" role="tab" aria-controls="home"
+                        aria-selected="true">
+                        <img src="~/Content/assets/img/DailyTopWin/DICE.png" alt="">
+                        <label style="color:white">Daily Top Win</label>
 
-        <div class="col-xl-12">
 
-            <div class="card" style="background: transparent;">
-                <div class="card-body">
-                    <!-- Bordered Tabs Justified -->
-                    <ul class="nav nav-tabs nav-tabs-bordered d-flex" id="borderedTabJustified" role="tablist"
-                        style="font-style: color: #000;">
-                        <li class="nav-item flex-fill" role="presentation">
-                            <button class="nav-link w-100 active" id="DTWDice" data-bs-toggle="tab"
-                                data-bs-target="#bordered-justified-home" type="button" role="tab" aria-controls="home"
-                                aria-selected="true">
-                                <img src="~/Content/assets/img/DailyTopWin/Dice.png" alt="">
-                                <h5 style="color:white">Daily Top Win</h5>
-                                </5>
-                            </button>
-                        </li>
-                        <li class="nav-item flex-fill" role="presentation">
-                            <button class="nav-link w-100" id="profile-tab" data-bs-toggle="tab"
-                                data-bs-target="#bordered-justified-profile" type="button" role="tab"
-                                aria-controls="profile" aria-selected="false" tabindex="-1">Jili</button>
-                        </li>
-                        <li class="nav-item flex-fill" role="presentation">
-                            <button class="nav-link w-100" id="contact-tab" data-bs-toggle="tab"
-                                data-bs-target="#bordered-justified-contact" type="button" role="tab"
-                                aria-controls="contact" aria-selected="false" tabindex="-1">Contact</button>
-                        </li>
-                    </ul>
-                    <div class="tab-content pt-2" id="borderedTabJustifiedContent">
-                        <div class="tab-pane fade show active" id="bordered-justified-home" role="tabpanel"
-                            aria-labelledby="home-tab">
-                            <label style="color: white;">Hello {{p[0].name}}</label>
-                            <img src="{{p[0].image_url}}">
-
-                        </div>
-                        <div class="tab-pane fade" id="bordered-justified-profile" role="tabpanel"
-                            aria-labelledby="profile-tab">
-                            Nesciunt totam et. Consequuntur magnam aliquid eos nulla dolor iure eos quia. Accusantium
-                            distinctio omnis et atque fugiat. Itaque doloremque aliquid sint quasi quia distinctio
-                            similique. Voluptate nihil recusandae mollitia dolores. Ut laboriosam voluptatum dicta.
-                        </div>
-                        <div class="tab-pane fade" id="bordered-justified-contact" role="tabpanel"
-                            aria-labelledby="contact-tab">
-                            Saepe animi et soluta ad odit soluta sunt. Nihil quos omnis animi debitis cumque.
-                            Accusantium quibusdam perspiciatis qui qui omnis magnam. Officiis accusamus impedit
-                            molestias nostrum veniam. Qui amet ipsum iure. Dignissimos fuga tempore dolor.
-                        </div>
-                    </div><!-- End Bordered Tabs Justified -->
-
+                    </button>
+                </li>
+                <li class="nav-item flex-fill" role="presentation">
+                    <button class="nav-link w-45" id="profile-tab" data-bs-toggle="tab"
+                        data-bs-target="#profile-justified" type="button" role="tab" aria-controls="profile"
+                        aria-selected="false" tabindex="-1"> <img src="~/Content/assets/img/DailyTopWin/JILI.png"
+                            alt="">
+                        <label style="color:white">Daily Top Win</label>
+                    </button>
+                </li>
+                <li class="nav-item flex-fill" role="presentation">
+                    <button class="nav-link w-45" id="contact-tab" data-bs-toggle="tab"
+                        data-bs-target="#contact-justified" type="button" role="tab" aria-controls="contact"
+                        aria-selected="false" tabindex="-1"> <img src="~/Content/assets/img/DailyTopWin/FC.png" alt="">
+                        <label style="color:white">Daily Top Win</label>
+                    </button>
+                </li>
+                <li class="nav-item flex-fill" role="presentation">
+                    <button class="nav-link w-45" id="contact-tab" data-bs-toggle="tab"
+                        data-bs-target="#contactni-justified" type="button" role="tab" aria-controls="contact"
+                        aria-selected="false" tabindex="-1"> <img src="~/Content/assets/img/DailyTopWin/ICE.png" alt="">
+                        <label style="color:white">Daily Top Win</label>
+                    </button>
+                </li>
+                <li class="nav-item flex-fill" role="presentation">
+                    <button class="nav-link w-45" id="contact-tab" data-bs-toggle="tab"
+                        data-bs-target="#contactni-justified" type="button" role="tab" aria-controls="contact"
+                        aria-selected="false" tabindex="-1"> <img src="~/Content/assets/img/DailyTopWin/R88.png" alt="">
+                        <label style="color:white">Daily Top Win</label>
+                    </button>
+                </li>
+            </ul>
+            <div class="tab-content pt-2" id="myTabjustifiedContent"
+                style="background-color: rgba(249, 180, 45, 0.1);, 0.5; color: white;">
+                <div class="tab-pane fade active show" id="home-justified" role="tabpanel" aria-labelledby="home-tab">
+                    Sunt est soluta temporibus accusantium neque nam maiores cumque temporibus. Tempora libero non est
+                    unde veniam est qui dolor. Ut sunt iure rerum quae quisquam autem eveniet perspiciatis odit. Fuga
+                    sequi sed ea saepe at unde.
+                    Sunt est soluta temporibus accusantium neque nam maiores cumque temporibus. Tempora libero non est
+                    unde veniam est qui dolor. Ut sunt iure rerum quae quisquam autem eveniet perspiciatis odit. Fuga
+                    sequi sed ea saepe at unde.
+                    Sunt est soluta temporibus accusantium neque nam maiores cumque temporibus. Tempora libero non est
+                    unde veniam est qui dolor. Ut sunt iure rerum quae quisquam autem eveniet perspiciatis odit. Fuga
+                    sequi sed ea saepe at unde.
+                    Sunt est soluta temporibus accusantium neque nam maiores cumque temporibus. Tempora libero non est
+                    unde veniam est qui dolor. Ut sunt iure rerum quae quisquam autem eveniet perspiciatis odit. Fuga
+                    sequi sed ea saepe at unde.
                 </div>
-            </div>
+                <div class="tab-pane fade" id="profile-justified" role="tabpanel" aria-labelledby="profile-tab">
+                    Nesciunt totam et. Consequuntur magnam aliquid eos nulla dolor iure eos quia. Accusantium distinctio
+                    omnis et atque fugiat. Itaque doloremque aliquid sint quasi quia distinctio similique. Voluptate
+                    nihil recusandae mollitia dolores. Ut laboriosam voluptatum dicta.
+                </div>
+                <div class="tab-pane fade" id="contact-justified" role="tabpanel" aria-labelledby="contact-tab">
+                    111Saepe animi et soluta ad odit soluta sunt. Nihil quos omnis animi debitis cumque. Accusantium
+                    quibusdam perspiciatis qui qui omnis magnam. Officiis accusamus impedit molestias nostrum veniam.
+                    Qui amet ipsum iure. Dignissimos fuga tempore dolor.
+                </div>
+                <div class="tab-pane fade" id="contactni-justified" role="tabpanel" aria-labelledby="contact-tab">
+                    111Saepe animi et soluta ad odit soluta sunt. Nihil quos omnis animi debitis cumque. Accusantium
+                    quibusdam perspiciatis qui qui omnis magnam. Officiis accusamus impedit molestias nostrum veniam.
+                    Qui amet ipsum iure. Dignissimos fuga tempore dolor.
+                </div>
+            </div><!-- End Default Tabs -->
+
         </div>
     </div>
+
 </div>
 
 @section scripts {
