Authorization update and adding script

--- a/casino_testapp/Views/Authorization/Registration.cshtml
+++ b/casino_testapp/Views/Authorization/Registration.cshtml
@@ -37,7 +37,7 @@
     <link href="~/Content/assets/css/style.css" rel="stylesheet">
 
     <!--Auth CSS-->
-    <link href="~/Content/auth.css" rel="stylesheet">
+    <link href="~/Content/auths.css" rel="stylesheet">
 
     <!-- =======================================================
     * Template Name: NiceAdmin
@@ -52,82 +52,93 @@
 <body id="authBody">
 
     <main>
-        <div class="container">
+        <div>
+            <div class="container">
 
-            <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
+                <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
-                            <div class="d-flex justify-content-center py-4">
-                                <a href="index.html" class="logo d-flex align-items-center w-auto">
-                                    <img src="~/Content/assets/img/logo.png" alt="">
-                                    <span class="d-none d-lg-block" id="brandTextColor">MJ Casino</span>
-                                </a>
-                            </div><!-- End Logo -->
+                                <div class="d-flex justify-content-center py-4">
+                                    <a href="index.html" class="logo d-flex align-items-center w-auto">
+                                        <img src="~/Content/assets/img/logo.png" alt="">
+                                        <span class="d-none d-lg-block" id="brandTextColor">MJ Casino</span>
+                                    </a>
+                                </div><!-- End Logo -->
 
-                            <div class="card mb-3">
+                                <div class="card mb-3">
 
-                                <div class="card-body">
+                                    <div class="card-body">
 
-                                    <div class="pt-4 pb-2">
-                                        <h5 class="card-title text-center pb-0 fs-4">Create an Account</h5>
-                                        <p class="text-center small">Enter your personal details to create account</p>
-                                    </div>
-
-                                    <form class="row g-3 needs-validation" novalidate>
-                                        <div class="col-12">
-                                            <label for="yourName" class="form-label">Username</label>
-                                            <input type="text" name="name" class="form-control" id="yourName" required>
-                                            <div class="invalid-feedback">Please, enter your name!</div>
+                                        <div class="pt-4 pb-2">
+                                            <h5 class="card-title text-center pb-0 fs-4">Create an Account</h5>
+                                            <p class="text-center small">Enter your personal details to create account</p>
                                         </div>
 
-                                        <div class="col-12">
-                                            <label for="yourPassword" class="form-label">Password</label>
-                                            <input type="password" name="password" class="form-control" id="yourPassword" required>
-                                            <div class="invalid-feedback">Please enter your password!</div>
-                                        </div>
+                                        <form class="row g-3 needs-validation" novalidate>
 
-                                        <div class="col-12">
-                                            <label for="cyourPassword" class="form-label">Confirm Password</label>
-                                            <input type="password" name="password" class="form-control" id="cyourPassword" required>
-                                            <div class="invalid-feedback">Please enter your password!</div>
-                                        </div>
-
-                                        <div style="height: 10px;">
-
-                                        </div>
-
-                                        <div class="col-12">
-                                            <label for="yourReferral" class="form-label">Referral Code</label>
-                                            <input type="text" name="name" class="form-control" id="yourReferral" required>
-                                            <div class="invalid-feedback">Please, enter referral code!</div>
-                                        </div>
-
-                                        <div class="col-12">
-                                            <div class="form-check">
-                                                <input class="form-check-input" name="terms" type="checkbox" value="" id="acceptTerms" required>
-                                                <label class="form-check-label" for="acceptTerms">I agree and accept the <a href="#">terms and conditions</a></label>
-                                                <div class="invalid-feedback">You must agree before submitting.</div>
+                                            <div class="col-12">
+                                                <div class="form-floating">
+                                                    <input type="text" name="username" class="form-control" id="yourUsername" required>
+                                                    <label for="yourUsername">Username</label>
+                                                </div>
+                                                <div class="invalid-feedback">Please enter your username.</div>
                                             </div>
-                                        </div>
-                                        <div class="col-12">
-                                            <button id="authButton" class="btn w-100 btn-lg" type="submit">Create Account</button>
-                                        </div>
-                                        <div class="col-12">
-                                            <p class="small mb-0">Already have an account? <a href="/Authorization/Login">Log in</a></p>
-                                        </div>
-                                    </form>
 
+                                            <div class="col-12">
+                                                <div class="form-floating">
+                                                    <input type="password" name="password" class="form-control" id="yourPassword" required>
+                                                    <label for="yourPassword">Password</label>
+                                                </div>
+                                                <div class="invalid-feedback">Please enter your password.</div>
+                                            </div>
+
+                                            <div class="col-12">
+                                                <div class="form-floating">
+                                                    <input type="password" name="cpassword" class="form-control" id="cPassword" required>
+                                                    <label for="cPassword">Confirm Password</label>
+                                                </div>
+                                                <div class="invalid-feedback">Please confirm your password.</div>
+                                            </div>
+
+                                            <div style="height: 10px;">
+
+                                            </div>
+
+                                            <div class="col-12">
+                                                <div class="form-floating">
+                                                    <input type="text" name="referral" class="form-control" id="referral" required>
+                                                    <label for="referral">Referral Code</label>
+                                                </div>
+                                                <div class="invalid-feedback">Please type referral code.</div>
+                                            </div>
+
+                                            <div class="col-12">
+                                                <div class="form-check">
+                                                    <input class="form-check-input" name="terms" type="checkbox" value="" id="acceptTerms" required>
+                                                    <label class="form-check-label" for="acceptTerms">I agree and accept the <a href="#">terms and conditions</a></label>
+                                                    <div class="invalid-feedback">You must agree before submitting.</div>
+                                                </div>
+                                            </div>
+                                            <div class="col-12">
+                                                <button id="authButton" class="btn w-100 btn-lg" type="submit">Create Account</button>
+                                            </div>
+                                            <div class="col-12">
+                                                <p class="small mb-0">Already have an account? <a href="/Authorization/Login">Log in</a></p>
+                                            </div>
+                                        </form>
+
+                                    </div>
                                 </div>
-                            </div>
 
+                            </div>
                         </div>
                     </div>
-                </div>
 
-            </section>
+                </section>
 
+            </div>
         </div>
     </main><!-- End #main -->
 
