--- a/casino_testapp/Views/Authorization/Login.cshtml
+++ b/casino_testapp/Views/Authorization/Login.cshtml
@@ -37,7 +37,7 @@
     <link href="~/Content/assets/css/style.css" rel="stylesheet">
 
     <!--Auth CSS-->
-    <link href="~/Content/auth.css" rel="stylesheet">
+    <link href="~/Content/auths.css" rel="stylesheet">
 
     <!-- =======================================================
     * Template Name: NiceAdmin
@@ -51,75 +51,80 @@
 <body id="authBody">
 
     <main>
-        <div class="container">
+        <div>
+            <div class="container" ng-controller="loginCtrlr">
 
-            <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
+                <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
-                            <!--<div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
-                                <img src="~/Content/assets/img/profile-img.jpg" alt="Profile" class="rounded-circle" />
-                            </div> -->
+                                <!--<div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
+                                    <img src="~/Content/assets/img/profile-img.jpg" alt="Profile" class="rounded-circle" />
+                                </div> -->
 
-                            <div class="d-flex justify-content-center py-4">
-                                <a href="index.html" class="logo d-flex align-items-center w-auto">
-                                    <img src="~/Content/assets/img/logo.png" alt="">
-                                    <span class="d-none d-lg-block" style="color: #f6f9ff">MJ Casino</span>
-                                </a>
-                            </div><!-- End Logo -->
+                                <div class="d-flex justify-content-center py-4">
+                                    <a href="index.html" class="logo d-flex align-items-center w-auto">
+                                        <img src="~/Content/assets/img/logo.png" alt="">
+                                        <span class="d-none d-lg-block" style="color: #f6f9ff">MJ Casino</span>
+                                    </a>
+                                </div><!-- End Logo -->
 
-                            <div class="card mb-3">
+                                <div class="card mb-3">
 
-                                <div class="card-body">
+                                    <div class="card-body">
 
-                                    <div class="pt-4 pb-2">
-                                        <h5 class="card-title text-center pb-0 fs-4">Login to Your Account</h5>
-                                        <p class="text-center small">Enter your username & password to login</p>
-                                    </div>
-
-                                    <form class="row g-3 needs-validation" novalidate>
-
-                                        <div class="col-12">
-                                            <label for="yourUsername" class="form-label">Username</label>
-                                            <input type="text" name="username" class="form-control" id="yourUsername" required>
-                                            <div class="invalid-feedback">Please enter your username.</div>
+                                        <div class="pt-4 pb-2">
+                                            <h5 class="card-title text-center pb-0 fs-4">Login to Your Account</h5>
+                                            <p class="text-center small">Enter your username & password to login</p>
                                         </div>
 
-                                        <div class="col-12">
-                                            <label for="yourPassword" class="form-label">Password</label>
-                                            <input type="password" name="password" class="form-control" id="yourPassword" required>
-                                            <div class="invalid-feedback">Please enter your password!</div>
-                                        </div>
+                                        <form class="row g-3 needs-validation" novalidate>
 
-                                        <div class="col-12">
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" name="remember" value="true" id="rememberMe">
-                                                <label class="form-check-label" for="rememberMe">Remember me</label>
+                                            <div class="col-12">
+                                                <div class="form-floating">
+                                                    <input type="text" name="username" class="form-control" id="yourUsername" required>
+                                                    <label for="yourUsername">Username</label>
+                                                </div>
+                                                <div class="invalid-feedback">Please enter your username.</div>
                                             </div>
-                                        </div>
-                                        <div class="col-12">
-                                            <button id="authButton" class="btn btn-lg w-100" type="submit">Login</button>
-                                        </div>
-                                        <div class="col-12">
-                                            <p class="small mb-0">Don't have account? <a href="/Authorization/Registration">Create an account</a></p>
-                                        </div>
-                                    </form>
+                                            <div class="col-12">
+                                                <div class="form-floating">
+                                                    <input type="password" name="password" class="form-control" id="yourPassword" required>
+                                                    <label for="yourPassword">Password</label>
+                                                </div>
+                                                <div class="invalid-feedback">Please enter your password.</div>
+                                            </div>
 
+                                            <div class="col-12">
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="checkbox" name="remember" value="true" id="rememberMe">
+                                                    <label class="form-check-label" for="rememberMe">Remember me</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-12">
+                                                <button id="authButton" class="btn btn-lg w-100" type="submit">Login</button>
+                                            </div>
+                                            <div class="col-12">
+                                                <p class="small mb-0">Don't have account? <a href="/Authorization/Registration">Create an account</a></p>
+                                            </div>
+                                        </form>
+
+                                    </div>
                                 </div>
-                            </div>
 
+                            </div>
                         </div>
                     </div>
-                </div>
 
-            </section>
+                </section>
 
+            </div>
         </div>
     </main><!-- End #main -->
 
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
+    
     <!-- Vendor JS Files -->
     <script src="~/Content/assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="~/Content/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -132,6 +137,9 @@
 
     <!-- Template Main JS File -->
     <script src="~/Content/assets/js/main.js"></script>
+    @section scripts {
+        <script src="~/Scripts/AngularJs/Authorization/login.js"></script>
+    }
 
 </body>
 
